# awesome-blockchains

./: BITCOIN-BITCOIN-BITCOIN.md  BITCOIN-CO2.md  BITCOIN-SCRIPT.md  BITCOIN-STORAGE.md  BITCOIN-TOKENS.md  BITCOIN.md  HASH.md  NOTES.md  PROOFS.md  README.md  TULIPS.md  WHATSBLOCKCHAIN.md  blockchain.rb
bitcoin_proof_of_work.rb/: README.md  difficulty.rb  hashes.rb  hashrate.rb  proof_of_work.rb  target.rb  verify.rb
blockchain.cpp/: blockchain.cpp  blockchain_with_proof_of_work.cpp
blockchain.go/: README.md  blockchain.go  blockchain_with_proof_of_work.go
blockchain.js/: .gitignore  README.md  blockchain.js  blockchain_with_proof_of_work.js  package.json
blockchain.kt/: README.md  blockchain-with-proof-of-work.kts  blockchain.kts
blockchain.py/: README.md  blockchain.py  blockchain_with_proof_of_work.py
blockchain.rb/: README.md  blockchain.rb  blockchain_with_proof_of_work.rb  blockchain_with_transactions.rb
blockchain.rs/: .README.md.swp  Cargo.toml  README.md
blockchain.rs/src/: block.rs  blockchain.rs  hashable.rs  lib.rs  main.rs  transaction.rs
merkletree.rb/: README.md  merkletree.rb
sha256/: NOTES.md  README.md  hash.go  hashrate.go  transactions.txt
